# Planes-of-Eternity

./: .gitignore  AGENTS.md  BUILD_INSTRUCTIONS.md  CI_ANDROID_SETUP.md  COMPUTE_SHADER_SORTING_EVALUATION.md  DIFFUSION_PIPELINE_SPRINT.md  GAME_BIBLE.md  GAUSSIAN_SPLATS_ARCHITECTURE.md  GAUSSIAN_SPLATS_EXECUTION_PLAN.md  GENIE_INTEGRATION_PLAN.md  PROMPT_DYNAMIC_THEMING.md  README.md  RealityGame.uproject  TODO.md  atbash_cipher.py  build_apk.sh  fix_borrow.py  fix_engine_archetypes.py  fix_shader.py  fix_shader_animation.py  fix_test.py  fix_texture.py  fix_voxel_biomes.py  install_windows_sdk.ps1  patch_engine.py  patch_html.py  patch_input.py  patch_lib.py  patch_todo.py  plan.md  replace_script.py  replace_script2.py  setup.bat  setup.sh  setup_dev.ps1  setup_dev.sh  start.sh  test_plan.md  test_response.rs  update_plan.txt  (+3 more)
.Jules/: palette.md
.jules/: bolt.md  palette.md  sentinel.md
Source/: RealityGame.Target.cs  RealityGameEditor.Target.cs
Source/RealityGame/: RealityGame.Build.cs
Source/RealityGame/Private/: RealityGame.cpp  RealityProjectorComponent.cpp
Source/RealityGame/Public/: RealityAssetDefinitions.h  RealityProjectorComponent.h  RealityTypes.h
legacy_epic_version/Source/RealityGame/Public/: RealityTypes.h
modules/: barbs.scad  primitives.scad
reality-engine/: .gitignore  Cargo.toml  Trunk.toml  build.bat  build.ps1  build.rs  build_fixed.bat  index.html  index.html.tmp  worker.js
reality-engine/.cargo/: config.toml
reality-engine/benches/: math_benchmarks.rs  npc_benchmark.rs  splat_benchmark.rs
reality-engine/src/: audio.rs  camera.rs  cfg.rs  crash_report.rs  engine.rs  genie_bridge.rs  indexed_db.rs  input.rs  labels.rs  lambda.rs  lib.rs  lsystem.rs  network.rs  persistence.rs  projector.rs  reality_types.rs  shader.wgsl  shader_lambda.wgsl  shader_sky.wgsl  shader_sort.wgsl  shader_splat.wgsl  shader_voxel.wgsl  splat.rs  splat4d_decoder.rs  splat4d_encoder.rs  texture.rs  visual_lambda.rs  voxel.rs  voxelizer.rs  world.rs  xr.rs
reality-engine/tests/: gui_features_test.rs  host_test.rs  interaction_test.rs  parser_dos.rs  physics_test.rs  render_test.rs  terrain_test.rs
reality-genie/: .gitignore  Cargo.toml  README.md
reality-genie/scripts/: automate_generation.py  generate_data.py
reality-genie/src/: continuous_diffusion.rs  diffusion.rs  dynamics.rs  fetch_weights.rs  gct.rs  lam.rs  lib.rs  sparc.rs  splat_gen.rs  text_encoder.rs  vqvae.rs
reality-genie/tests/: pipeline_test.rs
reality-signal-server/: Cargo.toml  crash_logs.txt
reality-signal-server/src/: main.rs
verification/: .gitignore  conftest.py  pytest.ini  requirements.txt  test_browser_ai.py  test_genie_ui.py  test_gui_features.py  test_inscribe_ui.py  test_labels_flat.py  test_network_ui.py  test_save_manager_ui.py  test_utils.py  test_vaporwave_ui.py  test_xr_ui.py  verify_cpu_renderer.py  verify_genie_ui.py  verify_network_ui.py  verify_save_manager.py  verify_ui.py  verify_ui_static.py  verify_xr.py
