[package]
name = "reality-engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wgpu = { version = "23.0.0", features = ["webgl"] }
log = "0.4"
console_log = "1"
wasm-bindgen-futures = "0.4"
bytemuck = { version = "1.16", features = ["derive"] }
cgmath = { version = "0.18", features = ["serde"] }
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
js-sys = "0.3.85"
uuid = { version = "1.20.0", features = ["v4", "serde", "js"] }
getrandom = { version = "0.3", features = ["wasm_js"] }
getrandom_02 = { package = "getrandom", version = "0.2", features = ["js"] }
reality-genie = { path = "../reality-genie" }

[dependencies.web-sys]
version = "0.3"
features = [
  "Document",
  "Window",
  "Element",
  "HtmlCanvasElement",
  "Event",
  "EventTarget",
  "KeyboardEvent",
  "MouseEvent",
  "DomRect",
  "Storage",
  "Navigator",
  "Geolocation",
  "Coordinates",
  "Position",
  "MediaDevices",
  "MediaStream",
  "MediaStreamConstraints",
  "HtmlVideoElement",
  "DeviceOrientationEvent",
  "PositionError",
  "WebSocket",
  "MessageEvent",
  "console",
  "XrSystem",
  "XrSession",
  "XrSessionMode",
  "XrReferenceSpace",
  "XrReferenceSpaceType",
  "XrRenderState",
  "XrRenderStateInit",
  "XrFrame",
  "XrViewerPose",
  "XrView",
  "XrViewport",
  "XrWebGlLayer",
  "XrWebGlLayerInit",
  "XrEye",
  "AudioContext",
  "AudioDestinationNode",
  "AudioNode",
  "AudioParam",
  "GainNode",
  "OscillatorNode",
  "OscillatorType",
  "AudioContextState"
]
