[package]
name = "reality-genie"
version = "0.1.0"
edition = "2021"

[dependencies]
candle-core = "0.8.2"
candle-nn = "0.8.2"
candle-transformers = "0.8.2"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
rand = "0.8"
tokenizers = { version = "0.23.1", default-features = false, features = ["unstable_wasm"] }
getrandom = { version = "0.2.17", features = ["js"] }
