[package]
name = "reality-genie"
version = "0.1.0"
edition = "2021"

[dependencies]
candle-core = "0.8.2"
candle-nn = "0.8.2"
candle-transformers = "0.8.2"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
rand = "0.8"
ndarray = "0.15"
npyz = "0.8"
tokenizers = { version = "0.23.1", default-features = false, features = ["unstable_wasm"] }
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Cache",
    "CacheStorage",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Window",
    "WorkerGlobalScope",
    "console"
] }
